@@ -9,7 +9,7 @@ import gettext
 import threading
 import logging
 
-from gi.repository import Gtk
+from gi.repository import Gtk, Gdk
 
 from tryton import __version__
 import tryton.common as common
@@ -398,6 +398,7 @@ class DBLogin(object):
         self.dialog.set_transient_for(self._window)
         self.dialog.set_icon(TRYTON_ICON)
         self.dialog.set_position(gtk.WIN_POS_CENTER_ALWAYS)
+        self.dialog.set_resizable(False)
 
         tooltips = common.Tooltips()
         button_cancel = gtk.Button(_('_Cancel'), use_underline=True)
@@ -422,10 +423,17 @@ class DBLogin(object):
         image = gtk.Image()
         image.set_from_file(os.path.join(PIXMAPS_DIR, 'tryton.png'))
         image.set_alignment(0.5, 1)
-        ebox = gtk.EventBox()
-        ebox.modify_bg(gtk.STATE_NORMAL, gtk.gdk.color_parse("#1b2019"))
-        ebox.add(image)
-        self.table_main.attach(ebox, 0, 3, 0, 1, ypadding=2)
+        overlay = Gtk.Overlay()
+        overlay.add(image)
+        label = Gtk.Label(__version__)
+        label.props.halign = Gtk.Align.END
+        label.props.valign = Gtk.Align.START
+        label.props.margin_right = 10
+        label.props.margin_top = 5
+        label.override_color(
+            Gtk.StateFlags.NORMAL, Gdk.RGBA(1, 1, 1, 1))
+        overlay.add_overlay(label)
+        self.table_main.attach(overlay, 0, 3, 0, 1, ypadding=2)
 
         self.profile_store = gtk.ListStore(gobject.TYPE_STRING,
             gobject.TYPE_BOOLEAN)
