@@ -1,3 +1,4 @@
+* Display version on login dialog
 * Use tab key for tab navigation
 * Use ShortcutsWindow
 * Improve default size of widgets and dialog
